<resources>
    <string name="psn" translatable="false">PSN</string>
    <string name="live" translatable="false">LIVE</string>
    <string name="app_name" translatable="false">Destiny Scheduler</string>
    <string name="default_url" translatable="false">https://www.bungie.net</string>
    <string name="default_img_desc">Icon</string>
    <string name="open_menu">Open menu</string>
    <string name="close_menu">Close menu</string>
    <string name="tx_login">Welcome Guardian! What is the secret code?</string>
    <string-array name="tab_titles">
        <item>recent</item>
        <item>scheduled</item>
        <item>finished</item>
    </string-array>
    <string-array name="profile_tab_titles">
        <item>stats</item>
        <item>medals</item>
    </string-array>
    <string-array name="menu_item">
        <item>Main</item>
        <item>Create event</item>
        <item>Search event</item>
        <item>My events</item>
        <item>History</item>
        <item>My clan</item>
        <item>My stats</item>
        <item>Settings</item>
        <item>About</item>
        <item>Logout</item>
    </string-array>
    <string-array name="menu_section">
        <item>D A T A</item>
        <item>O T H E R</item>
    </string-array>
    <string name="def_clan_desc">"Here goes Clan\'s description"</string>
    <string name="def_clan_header">Clan\'s name</string>
    <string name="empty_new_events">There is no new events to play right now.</string>
    <string name="empty_scheduled_list">You don\'t have any scheduled event.</string>
    <string name="menu">Menu</string>
    <string name="refresh_lists">Refresh lists</string>
    <string name="game_type_label">Game type</string>
    <string name="game_label">Game</string>
    <string name="date_label">Date</string>
    <string name="time_label">Time</string>
    <string name="max_guardians_label">Min guardians</string>
    <string name="min_light_label">Min light</string>
    <string name="new_event_button">CREATE EVENT</string>
    <string name="validate_event_title">VALIDATION</string>
    <string name="event_confirmation">This event happened?</string>
    <string name="search_title">SEARCH</string>
    <string name="date_time_section">Date and time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="specs">Specs</string>
    <string name="min_light">Min light</string>
    <string name="guardians">Guardians</string>
    <string name="guardians_participating">Guardians participating</string>
    <string name="join">Join</string>
    <string name="participants_guardians">Enrolled guardians</string>
    <string name="created_by">Created by</string>
    <string name="scheduled_games">Scheduled events</string>
    <string-array name="clan_order_by">
        <item>Name</item>
        <item>Level</item>
    </string-array>
    <string name="games_available">Events available</string>
    <string name="members">Members</string>
    <string name="order_by">Order by</string>
    <string name="games_played">Events played</string>
    <string name="sort_by">Sort by</string>
    <string name="system">System</string>
    <string name="my_profile">PROFILE</string>
    <string name="joined_events">Joined events:</string>
    <string name="events_created">Events created:</string>
    <string name="member_since">Member since:</string>
    <string name="court">Court of Oryx</string>
    <string name="crucible">Crucible</string>
    <string name="patrol">Patrol</string>
    <string name="prison">Prison of Elders</string>
    <string name="raid">Raid</string>
    <string name="story">Story</string>
    <string name="strike">Strike</string>
    <string name="strike_list">Strike List</string>
    <string name="srl" translatable="false">SRL</string>
    <string-array name="event_types">
        <item>Court of Oryx</item>
        <item>Crucible</item>
        <item>Patrol</item>
        <item>Prison of Elders</item>
        <item>Raid</item>
        <item>Story</item>
        <item>Strike</item>
        <item>Strike List</item>
        <item>SRL</item>
    </string-array>
    <string-array name="spinner_types">
        <item>All</item>
        <item>Court of Oryx</item>
        <item>Crucible</item>
        <item>Patrol</item>
        <item>Prison of Elders</item>
        <item>Raid</item>
        <item>Story</item>
        <item>Strike</item>
        <item>Strike List</item>
        <item>SRL</item>
    </string-array>
    <string-array name="type_ids">
        <item>type:all</item>
        <item>type:court</item>
        <item>type:crucible</item>
        <item>type:patrol</item>
        <item>type:prison</item>
        <item>type:raid</item>
        <item>type:story</item>
        <item>type:strike</item>
        <item>type:strike_list</item>
        <item>type:srl</item>
    </string-array>
    <string name="game_status">Event status</string>
    <string-array name="game_status_id">
        <item>status:all</item>
        <item>status:0</item>
        <item>status:1</item>
        <item>status:2</item>
    </string-array>
    <string-array name="table_names">
        <item>Clan</item>
        <item>Event</item>
        <item>Event Type</item>
        <item>LoggedUser</item>
        <item>Member</item>
        <item>Notification</item>
        <item>SavedImages</item>
    </string-array>
    <string-array name="pref_time_list_entries">
        <item>30 minutes</item>
        <item>15 minutes</item>
        <item>10 minutes</item>
        <item>5 minutes</item>
        <item>On time</item>
    </string-array>
    <string-array name="pref_new_time_list_entries">
        <item>6 hours</item>
        <item>2 hours</item>
        <item>1 hour</item>
        <item>30 minutes</item>
        <item>10 minutes</item>
    </string-array>
    <string-array name="level_title">
        <item>Beginner</item>
        <item>Apprentice</item>
        <item>Explorer</item>
        <item>Adventurer</item>
        <item>Recruit</item>
        <item>Guardian</item>
        <item>Veteran</item>
        <item>Master</item>
        <item>Lord</item>
        <item>Legend</item>
    </string-array>
    <string-array name="event_title">
        <item>b:Rune</item> //1
        <item>b:Rune</item> //2
        <item>b:Rune</item> //3
        <item>a:of War</item> //4
        <item>a:of Olds</item> //5
        <item>a:of Olds</item> //6
        <item>a:of Olds</item> //7
        <item>b:Control</item> //8
        <item>a:of the Brotherhood</item> //9
        <item>a:of Death</item> //10
        <item>a:from Hell</item> //11
        <item>a:from Hell</item> //12
        <item>a:from Hell</item> //13
        <item>a:from Hell</item> //14
        <item>a:from Hell</item> //15
        <item>b:Iron</item> //14
        <item>a:of Mayhem</item> //15
        <item>a:of Mayhem</item> //16
        <item>a:of Mayhem</item> //17
        <item>b:Rift</item> //17
        <item>a:Lone</item> //18
        <item>a:of Relics</item> //19
        <item>b:Battle</item> //20
        <item>b:Supreme</item> //21
        <item>b:Supreme</item> //22
        <item>b:Supreme</item> //23
        <item>a:of Osiris</item> //24
        <item>b:Zone</item> //25
        <item>a:of the City</item> //26
        <item>b:Hive</item> //27
        <item>a:of Sands</item> //28
        <item>b:Lunatic</item> //29
        <item>a:Cursed</item> //30
        <item>a:of Ishtar</item> //31
        <item>a:of Chains</item> //32
        <item>a:of Chains</item> //33
        <item>a:of Chains</item> //34
        <item>a:of Chains</item> //35
        <item>a:of Chains</item> //36
        <item>a:of Chains</item> //37
        <item>b:Eri\'s</item> //38
        <item>b:Eri\'s</item> //39
        <item>b:Regicide</item> //40
        <item>b:Regicide</item> //41
        <item>a:of Time</item> //42
        <item>a:of Time</item> //43
        <item>a:John Henry</item> //44
        <item>a:John Henry</item> //45
        <item>b:Galaxy</item> //46
        <item>b:Galaxy</item> //47
        <item>b:Vanguard</item> //48
        <item>b:Vanguard</item> //49
        <item>b:Vanguard</item> //50
        <item>b:Vanguard</item> //51
        <item>b:Vanguard</item> //52
        <item>b:Vanguard</item> //53
        <item>b:Vanguard</item> //54
        <item>b:Vanguard</item> //55
        <item>b:Vanguard</item> //56
        <item>b:Vanguard</item> //57
        <item>b:Vanguard</item> //58
        <item>b:Vanguard</item> //59
        <item>b:Vanguard</item> //60
        <item>b:Vanguard</item> //61
        <item>b:Vanguard</item> //62
        <item>b:Vanguard</item> //63
        <item>b:Vanguard</item> //64
        <item>a:of Dawn</item> //65
        <item>b:Heroic</item> //66
        <item>b:Heroic</item> //67
        <item>b:Vanguard</item> //68
        <item>b:Legacy</item> //69
        <item>b:Swift</item> //70
    </string-array>
    <string-array name="medal_names">
        <item>My game, my rules</item>
        <item>Player</item>
        <item>Eye of the beholder</item>
        <item>The beloved one</item>
        <item>Hated or feared?</item>
        <item>No pain, no gain</item>
        <item>Striker</item>
        <item>Space cowboy</item>
    </string-array>
    <string-array name="medal_desc">
        <item>Number of created events</item>
        <item>Number of played events</item>
        <item>Evaluations made</item>
        <item>Number of likes received</item>
        <item>Number of dislikes received</item>
        <item>Crucible events played</item>
        <item>Strike events played</item>
        <item>Raid events played</item>
    </string-array>
    <string name="default_title">New on the block</string>
    <string name="tier1">Reciprocate Rune</string>
    <string name="tier2">Stolen Rune</string>
    <string name="tier3">Antiquated Rune</string>
    <string name="clash">Clash</string>
    <string name="classic3">Classic 3v3</string>
    <string name="classic6">Classic 6v6</string>
    <string name="classic1">Classic Rumble</string>
    <string name="control">Control</string>
    <string name="doubles">Doubles</string>
    <string name="elimination">Elimination</string>
    <string name="prepare_label1">Looking for your documents</string>
    <string name="prepare_label2">Have you been here?</string>
    <string name="prepare_label3">Taking a picture</string>
    <string name="prepare_label4">Searching for your friends</string>
    <string name="prepare_label5">Inviting them to the welcome party</string>
    <string name="prepare_label6">Done! </string>
    <string name="begin_yes">Begin, yes?</string>
    <string name="prepare_title">Preparing your arrival</string>
    <string name="prepare_msg1">Can you wait just a little please? Turns out there is too many Guardians in this universe…</string>
    <string name="prepare_msg2">\tDon\'t worry, it only takes a bit longer on the first login.</string>
    <string name="email" translatable="false">lsgrandchamp@gmail.com</string>
    <string name="contact">Contact</string>
    <string name="version">Version</string>
    <string name="about">ABOUT</string>
    <string name="more_info">More information about this app</string>
    <string name="on">On</string>
    <string name="sounds">Sounds</string>
    <string name="other">Other</string>
    <string name="notifications">Notifications</string>
    <string name="minutes_before">minutes before</string>
    <string name="scheduled_notify_text">Notifies events you joined</string>
    <string name="email_title" translatable="false">E-mail</string>
    <string name="server_side">Server side</string>
    <string name="fernando" translatable="false">Fernando Rufino Fontoura</string>
    <string name="lucas" translatable="false">Lucas Sene Grandchamp</string>
    <string name="client_side">Client side</string>
    <string name="developers">Developers</string>
    <string name="application">Application</string>
    <string name="comment">Comment</string>
</resources>