<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/subheaderHeight"
        android:textColor="@color/lineColor"
        android:gravity="center_vertical"
        android:textSize="13sp"
        android:text="@string/application"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/listItemHeight"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1.01"
            android:textSize="13sp"
            android:alpha="0.75"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/subheaderHeight"
        android:textColor="@color/lineColor"
        android:gravity="center_vertical"
        android:textSize="13sp"
        android:text="@string/developers"
        android:textStyle="bold"/>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/listItemHeight"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/client_side"
        android:textSize="16sp"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lucas"
        android:textSize="13sp"
        android:alpha="0.75"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/listItemHeight"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_side"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fernando"
            android:textSize="13sp"
            android:alpha="0.75"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/subheaderHeight"
        android:textColor="@color/lineColor"
        android:gravity="center_vertical"
        android:textSize="13sp"
        android:text="@string/contact"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/listItemHeight"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_title"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="13sp"
            android:alpha="0.75"/>

    </LinearLayout>

</LinearLayout>