<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false">

    <include layout="@layout/event_header_layout" android:id="@+id/header" />

    <LinearLayout
        android:id="@+id/comment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/subheaderHeight"
            android:gravity="center_vertical"
            android:textSize="@dimen/secondaryTextSize"
            android:text="@string/comment"
            android:layout_below="@id/header"
            android:textColor="@color/psnColor"/>

        <TextView
            android:id="@+id/comment_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/paddingBottomLabelText" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/subheaderHeight"
        android:id="@+id/section_date"
        android:gravity="center_vertical"
        android:textSize="@dimen/secondaryTextSize"
        android:text="@string/date_time_section"
        android:textColor="@color/psnColor"/>

    <LinearLayout
        android:id="@+id/linear_date"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/date"
            android:paddingBottom="@dimen/paddingBottomLabelText" />

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:textSize="@dimen/secondaryTextSize"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_time"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/time"
            android:paddingBottom="@dimen/paddingBottomLabelText" />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:textSize="@dimen/secondaryTextSize"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/subheaderHeight"
        android:id="@+id/section_specs"
        android:gravity="center_vertical"
        android:textSize="@dimen/secondaryTextSize"
        android:text="@string/specs"
        android:textColor="@color/psnColor"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:id="@+id/linear_light"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/min_light"
            android:paddingBottom="@dimen/paddingBottomLabelText" />

        <TextView
            android:id="@+id/light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="@dimen/secondaryTextSize"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_guardians"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/participants_guardians"
            android:paddingBottom="@dimen/paddingBottomLabelText" />

        <TextView
            android:id="@+id/guardians"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="@dimen/secondaryTextSize"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/subheaderHeight"
        android:id="@+id/section_guardians"
        android:gravity="center_vertical"
        android:textSize="@dimen/secondaryTextSize"
        android:text="@string/guardians"
        android:textColor="@color/psnColor"
        android:layout_marginTop="8dp"/>

</LinearLayout>