<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="@dimen/global_padding"
        android:paddingEnd="@dimen/global_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/subheaderHeight"
            android:textColor="@color/psnColor"
            android:gravity="center_vertical"
            android:textSize="13sp"
            android:text="@string/scheduled_games"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/scheduled_switch_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/listItemHeight"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scheduled_notify_text"
                    android:textSize="13sp"
                    android:alpha="0.75"/>

            </LinearLayout>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/scheduled_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:alpha="0.75"/>

        <LinearLayout
            android:id="@+id/scheduled_list_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/listItemHeight"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="16sp"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/scheduled_list_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minutes_before"
                android:textSize="13sp"
                android:alpha="0.75"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:alpha="0.75"/>

        <LinearLayout
            android:id="@+id/scheduled_check_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/listItemHeight"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sounds"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/scheduled_check_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/on"
                    android:textSize="13sp"
                    android:alpha="0.75"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/scheduled_check"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true" />
            </LinearLayout>



        </LinearLayout>


        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/subheaderHeight"
            android:textColor="@color/psnColor"
            android:gravity="center_vertical"
            android:textSize="13sp"
            android:text="@string/other"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/about_preference"
            android:layout_width="match_parent"
            android:layout_height="@dimen/listItemHeight"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textSize="16sp"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_info"
                android:textSize="13sp"
                android:alpha="0.75"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
